--- a/学习心得.md
+++ b/学习心得.md
@@ -1,2 +1,8 @@
 #静态链接
-- 我理解的静态链接就是自己写.h文件和对应的.c文件（类似于C课设的写法），然后在需要调用的到这个函数的.c文件里面加上头`#include "xxx.h"`
+- 不是很确定是什么样的做法，我理解的静态链接就是自己写.h文件和对应的.c文件（类似于C课设的写法），然后在需要调用的到这个函数的.c文件里面加上头`#include "xxx.h"`
+
+#静态库链接
+在makefile文件中编写编译规则，用ar指令生成.a文件，注意库名以lib开头
+
+#动态库链接
+生成.so
